# llm_from_scratch

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  tokenizer.py
.github/: dependabot.yml
.github/workflows/: lint.yml  test.yml
book/ch2/: README.md  create_vocab.py  dataloader.py  read_story.py  sliding_window.py  tiktoken_example.py  token_embedding.py  tokenize_story.py  tokenizer_example.py
book/ch3/: README.md  masked_attention.py  multi_head_attention.py  simple_self_attention.py  trainable_self_attention.py
book/ch4/: README.md  activation_functions.py  configuration.py  feed_forward_network.py  gpt_model_assembly.py  gpt_original.py  layer_normalization.py  shortcut_connections.py  text_generation.py  tokenization_basics.py  transformer_block.py
docs/todos/: 01-fix-tokenizer-inefficiency.md  02-add-dataloader-utilities.md  03-add-embedding-components.md  04-add-bpe-tokenizer-wrapper.md  05-add-configuration-management.md  06-enhance-package-structure.md  TODO_TEMPLATE.md
src/: __init__.py
src/llm_from_scratch/: __init__.py  attention.py  causal_attention.py  dataset.py  model.py  self_attention.py  tokenizer.py  utils.py
tests/: test_dataset.py  test_tokenizer.py  test_utils.py
